grammar.js
    script: $ => repeat($._top_level),

    _top_level: $ => choice(
      $.block,
      $._statement,
      $._filler_line
    ),

    block: $ => prec.right(seq(
      repeat($._blank),
      seq(
        /\((&[+-]?)?/,
        $._terminator
      ),
      repeat(choice(
        $._statement,
        $._filler_line,
        $.block
      )),
      seq(
        repeat($._blank),
        ')',
        $._terminator
      ),
    )),

    _statement: $ => seq(
      repeat($._blank),
      choice(
        $.labeled_expression,
        $._non_labeled_statement
      )
    ),

    if_block: $ => seq(
      choice(
        seq(
          field('command', alias($._hll_var_if_command, $.identifier)),
          repeat1($._blank),
          field('condition', $._hll_expression),
        ),
        seq(
          field('command', alias(longAndShortForm('IF'), $.identifier)),
          repeat1($._blank),
          field('condition', $._expression)
        )
      ),
      seq(
        $._terminator,
        repeat($._filler_line),
        choice(
          $._statement,
          $.block
        ),
        repeat(seq(
          repeat($._filler_line),
          repeat($._blank),
          $.elif_block,
        )),
        optional(seq(
          repeat($._filler_line),
          repeat($._blank),
          $.else_block
        ))
      )
    ),

    else_block: $ => seq(
      field('command', alias(
        longAndShortForm('ELSE'), $.identifier)
      ),
      seq(
        $._terminator,
        repeat($._filler_line),
        choice(
          $._statement,
          $.block,
        )
      ),
    ),

    while_block: $ => seq(
      choice(
        seq(
          field('command', alias(
            longAndShortForm('WHILE'), $.identifier)
          ),
          repeat1($._blank),
          field('condition', $._expression),
        ),
        seq(
          field('command', alias(token(seq(
            longAndShortForm('Var'),
            '.',
            longAndShortForm('WHILE')
          )), $.identifier)),
          repeat1($._blank),
          field('condition', $._hll_expression),
        )
      ),
      $._terminator,
      repeat($._filler_line),
      choice(
        $._statement,
        $.block
      )
    ),

    repeat_block: $ => choice(
      $._repeat_block_pre_condition_format,
      $._repeat_block_post_condition_format,
    ),

    _repeat_block_pre_condition_format: $ => seq(
      field('command', alias(longAndShortForm('RePeaT'), $.identifier)),
      choice(
        seq(
          repeat1($._blank),
          field('condition', $._expression),
          choice(
            $._statement,
            seq(
              $._terminator,
              repeat($._filler_line),
              choice(
                $._statement,
                $.block
              )
            )
          )
        ),
        seq(
          $._terminator,
          repeat($._filler_line),
          choice(
            $._statement,
            $.block
          ),
        )
      )
    ),

    _repeat_block_post_condition_format: $ => prec.dynamic(PREC.repeat_post_condition, seq(
      field('command', alias(longAndShortForm('RePeaT'), $.identifier)),
      choice(
        seq(
          $._terminator,
          repeat($._filler_line),
          choice(
            $._statement,
            $.block
          ),
          seq(
            repeat($._filler_line),
            field('command', alias(longAndShortForm('WHILE'), $.identifier)),
            repeat1($._blank),
            field('condition', $._expression),
            $._terminator
          )
        )
      )
    )),

    binary_expression: $ => choice(
      $._binary_expression,
      $._and_expression
    ),

    _binary_expression: $ => {
      const operators = [
        ['^^', PREC.logical_xor],
        ['||', PREC.logical_or],
        ['+', PREC.add_sub],
        ['-', PREC.add_sub],
        ['*', PREC.mul_div_mod],
        ['/', PREC.mul_div_mod],
        ['%', PREC.mul_div_mod],
        ['|', PREC.bitwise_or],
        ['^', PREC.bitwise_xor],
        ['==', PREC.relational],
        ['!=', PREC.relational],
        ['>', PREC.relational],
        ['>=', PREC.relational],
        ['<=', PREC.relational],
        ['<', PREC.relational],
        ['<<', PREC.shift],
        ['>>', PREC.shift],
        ['..', PREC.range],
        ['--', PREC.range],
        ['++', PREC.range]
      ];

      return choice(...operators.map(([op, pre]) => {
        return prec.left(pre, seq(
          field('left', $._expression),
          field('operator', op),
          field('right', $._expression)
        ))
      }));
    },

    _and_expression: $ => {
      const operators = [
        ['&&', PREC.logical_and],
        ['&', PREC.bitwise_and]
      ];

      return choice(...operators.map(([op, pre]) => {
        return prec.left(pre, seq(
          field('left', $._expression),
          $._and_operator_pre_hook,
          field('operator', op),
          field('right', $._expression)
        ))
      }));
    },

    macro: $ => prec.left(choice(
      seq(
        '&',
        alias($.identifier, 'name')
      ),
      seq(
        '&',
        '(',
        alias($.identifier, 'name'),
        ')'
      ),
      seq(
        '&',
        '{',
        alias($.identifier, 'name'),
        '}'
      )
    )),

    command_expression: $ => seq(
      optional(/(::)?B::/),
      choice(
        seq(
          $._var_command,
          $._terminator
        ),
        seq(
          $._host_command,
          $._terminator
        ),
        seq(
          $._other_command,
          $._terminator
        )
      )
    ),

    _host_command: $ => seq(
      field('command', alias($._host_command_with_default_format, $.identifier)),
      repeat1($._blank),
      field('arguments', alias($._host_command_argument_list_default_format, $.argument_list))
    ),

    _other_command: $ => seq(
      field('command', alias($._command_identifier, $.identifier)),
      optional(seq(
        repeat1($._blank),
        field('arguments', optional(alias($._command_arguments, $.argument_list))),
      ))
    ),

    call_expression: $ => prec(PREC.call, choice(
      $._hll_var_call_expression,
      seq(
        field('function', choice(
          $._expression,
          alias($._function_identifier, $.identifier)
        )),
        field('arguments', $.argument_list)
      )
    )),

    _function_identifier: $ => seq(
      alias($.identifier, 'function'),
      repeat(seq(
        '.',
        alias($.identifier, 'subfunction')
      ))
    ),

    argument_list: $ => seq(
      '(',
      optional(seq(
        $._expression,
        repeat(seq(
          repeat($._blank),
          ',',
          repeat($._blank),
          $._expression
        ))
      )),
      ')'
    ),


    /*****************************************
     * PRACTICE commands with HLL expressions
     *****************************************/

    _var_command: $ => choice(
      $._hll_var_command,
      $._hll_var_definition_command,
      $._non_hll_var_command
    ),

    _hll_var_if_command: $ => seq(
      longAndShortForm('Var'),
      '.',
      longAndShortForm('IF')
    ),

    _hll_var_call_expression: $ => seq(
      field('function', alias($._hll_var_call_expression_function, $.identifier)),
      field('arguments', alias($.hll_var_call_expression_argument_list, $.argument_list))
    ),

    _hll_expression: $ => choice(
      $._hll_number_literal,
      $.hll_assignment_expression,
      $.hll_binary_expression,
      $.hll_conditional_expression,
      $.hll_unary_expression,
      $.hll_update_expression,
      $.hll_cast_expression,
      $.hll_pointer_expression,
      $.hll_sizeof_expression,
      $.hll_subscript_expression,
      $.hll_call_expression,
      $.hll_field_expression,
      $.hll_string_literal,
      $.hll_char_literal,
      $.hll_parenthesized_expression,
      $.identifier,
      $.symbol
    ),

    // TRACE32 does not allow any spaces between function name
    // and opening parens
    _address_expression: $ => choice(
      $.integer,
      $.macro,
      $.macro_text_expansion,
      alias($._address_binary_expression, $.binary_expression),
      $.call_expression,
      $._parenthesized_address_expression
    ),

    access_class: $ => /[a-zA-Z][a-zA-Z0-9]*:/,

    address: $ => choice(
      seq(
        choice(
          seq(
            field('access', $.access_class),
            optional($.memory_space)
          ),
          $.memory_space
        ),
        field('location', $._address_expression)
      ),
      $.access_class
    ),

    integer: $ => choice(
      ...RE_BIN_HEX_NUMBER,
      seq(
        $._decimal_number_pre_hook,
        $._decimal_number
      )
    ),

    bitmask: $ => choice(
      /0y[0-9xX]+/,  // Bitmask
      /0x[0-9a-fA-FxX]+/,  // Hexmask
    ),

    string: $ => seq(
      '"',
      repeat(choice(
        /[^"&]+/,
        /""/,  // Escape sequence
        $._ampersand_char,
        $.macro,
      )),
      '"'
    ),

    _expression: $ => choice(
      $.assignment_expression,
      $.binary_expression,
      $.call_expression,
      $.identifier,
      $.unary_expression,
      $.macro,
      $.macro_text_expansion,
      $._literal,
      $._parenthesized_expression,
      $._path_expression
    ),

    identifier: $ => /[0-9]*[A-Za-z_]\w*/,

    comment: $ => /[ \t]*(;|\/\/)(\\\r?\n|[^\n])*\n/,

    _filler_line: $ => choice(
      $._blank_line,
      $.comment
    ),

    _terminator: $ => choice(
      $.comment,
      $._blank_line
    ),

    _blank: $ => /[ \t]/,
  }
})

function longAndShortForm(keyword, aliasAsWord = true) {
  // Capture short form: RePeaT -> [rR][pP][tT]
  const short = keyword
    .split('')
    .map(l => l === l.toUpperCase() ? `[${l.toLowerCase()}${l}]` : '')
    .join('')

  // Capture long form: RePeaT -> [rR][eE][pP][eE][aA][tT]
  const long = keyword
    .split('')
    .map(l => `[${l.toLowerCase()}${l.toUpperCase()}]`)
    .join('')

  let result = new RegExp([short, long].join('|'))
  if (!short || short === long) {
    result = new RegExp(long)
  }

  if (aliasAsWord) {
    result = alias(result, keyword)
  }
  return result
}
