test/corpus/control_flow.txt
==================
Labels
==================

abc:

---

(script
  (label
    (identifier)))

==================
IF block statements
==================

IF &a
  STOP

IF &b
  STOP
ELSE
  CONTinue

IF &c
  continue
ELSE IF &d
  stop

IF &e
  CONTinue
ELSE IF &f
  CONT
ELSE IF &g
  stop
ELSE
  cont

---

(script
  (if_block
    (identifier)
    (command))
  (if_block
    (identifier)
    (command)
    (else_block
      (command)))
  (if_block
    (identifier)
    (command)
    (else_block
      (if_block
        (identifier)
        (command))))
  (if_block
    (identifier)
    (command)
    (else_block
      (if_block
        (identifier)
        (command)
        (else_block
          (if_block
            (identifier)
            (command)
            (else_block
                (command))))))))

==================
Nested IF block statements
==================

IF &a
  IF &b
    stop
  ELSE
    IF &c
    (
      continue
    )

---

(script
  (if_block
    (identifier)
    (if_block
      (identifier)
      (command)
      (else_block
        (if_block
          (identifier)
          (command))))))

==================
IF block statements with parentheses
==================

IF &a
(
  STOP
)
ELSE IF &b
(
  CONTINUE
)
ELSE
(
  BREAK
)

---

(script
  (if_block
    (identifier)
    (command)
    (else_block
      (if_block
        (identifier)
        (command)
        (else_block
          (command))))))


==================
WHILE block statements
==================

WHILE &a
  Step

---

(script
  (while_block
    (identifier)
    (command)))

==================
WHILE block statements with parentheses
==================

WHILE &a
(
  Step
  Break
)

---

(script
  (while_block
    (identifier)
    (command)
    (command)))

==================
RePeaT block statements
==================

RePeaT 10. STOP

RePeaT &a
  print

REPEAT 0xaAfF09
(
  cont
)

RPT
(
  b
)

rpt
(
  s
)
WHILE &a

---

(script
  (repeat_block
    (literal)
    (command))
  (repeat_block
    (identifier)
    (command))
  (repeat_block
    (literal)
    (command))
  (repeat_block
    (command))
  (repeat_block
    (command)
    (identifier)))

==================
ON PRACTICE event control
==================

ON ALWAYS inherit
ON ERROR CONTinue
ON stoP Default
ON CMD step DO ~/./run?.*mm
ON TIME 1ns GOSUB label

ON TIME 2.0s GOTO
(
  break
)

ON TIME 2.0ms JUMPTO l1
ON TIME 2.0us default

---

(script
  (on_event_control)
  (on_event_control)
  (on_event_control)
  (on_event_control
    (command)
    (literal))
  (on_event_control
    (literal)
    (identifier))
  (on_event_control
    (literal)
    (command))
  (on_event_control
    (literal)
    (identifier))
  (on_event_control
    (literal)))

==================
ON device event control
==================

ON ABREAK DEFault
ON CORESWITCH DEFault
ON GO DEFault
ON PBREAK DEFault
ON POWERDOWN DEFault
ON POWERUP DEFault
ON RESET DEFault
ON SYSDOWN DEFault
ON SYSUP DEFault
ON TRIGGER DEFault

ON PBREAKAT P:3:::42:0xfff8000 DEFault

ON OBREAK DEFault
ON ATRIGGER DEFault
ON OTRIGGER DEFault
ON CATRIGGER DEFault

---

(script
  (on_event_control)
  (on_event_control)
  (on_event_control)
  (on_event_control)
  (on_event_control)
  (on_event_control)
  (on_event_control)
  (on_event_control)
  (on_event_control)
  (on_event_control)
  (on_event_control
    (literal))
  (on_event_control)
  (on_event_control)
  (on_event_control)
  (on_event_control))

==================
ON CPU event control
==================

ON PDRESETOFF DO run.cmm
ON BOOTSTALL DO run.cmm
ON CPUBOOTSTALL DO run.cmm
ON TRACEHUBBREAK DO run.cmm
ON PBREAKRESET DO run.cmm
ON PBREAKVMENTRY DO run.cmm
ON PBREAKVMEXIT DO run.cmm
ON PBREAKSMMENTRY DO run.cmm
ON PBREAKSMMEXIT DO run.cmm
ON PBREAKGENERALDETECT DO run.cmm
ON PBREAKINIT DO run.cmm
ON PBREAKMACHINECHECK DO run.cmm
ON PBREAKSHUTDOWN DO run.cmm
ON PBREAKC6EXIT DO run.cmm
ON PBREAKENCLU DO run.cmm

---

(script
  (on_event_control
    (literal))
  (on_event_control
    (literal))
  (on_event_control
    (literal))
  (on_event_control
    (literal))
  (on_event_control
    (literal))
  (on_event_control
    (literal))
  (on_event_control
    (literal))
  (on_event_control
    (literal))
  (on_event_control
    (literal))
  (on_event_control
    (literal))
  (on_event_control
    (literal))
  (on_event_control
    (literal))
  (on_event_control
    (literal))
  (on_event_control
    (literal))
  (on_event_control
    (literal)))

==================
GLOBALON PRACTICE event control
==================

GLOBALON ALWAYS DO "file.cmm"
GLOBALON ERROR DO test.cmm
GLOBALON STOP DO a/b/c.cmm
GLOBALON CMD step DO run.cmm
GLOBALON TIME 10.0ns DO do.cmm
GLOBALON CMD print EXEcute continue

---

(script
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (command)
    (literal))
  (globalon_event_control
    (literal)
    (literal))
  (globalon_event_control
    (command)
    (command)))

==================
GLOBALON device event control
==================

GLOBALON ABREAK DO run.cmm
GLOBALON CORESWITCH DO run.cmm
GLOBALON GO DO run.cmm
GLOBALON PBREAK DO run.cmm
GLOBALON POWERDOWN DO run.cmm
GLOBALON POWERUP DO run.cmm
GLOBALON RESET DO run.cmm
GLOBALON SYSDOWN DO run.cmm
GLOBALON SYSUP DO run.cmm
GLOBALON TRIGGER DO run.cmm

GLOBALON PBREAKAT P:3:::42:0xfff8000 DO run.cmm

---

(script
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal)
    (literal)))

==================
GLOBALON CPU event control
==================

GLOBALON PDRESETOFF DO run.cmm
GLOBALON BOOTSTALL DO run.cmm
GLOBALON CPUBOOTSTALL DO run.cmm
GLOBALON TRACEHUBBREAK DO run.cmm
GLOBALON PBREAKRESET DO run.cmm
GLOBALON PBREAKVMENTRY DO run.cmm
GLOBALON PBREAKVMEXIT DO run.cmm
GLOBALON PBREAKSMMENTRY DO run.cmm
GLOBALON PBREAKSMMEXIT DO run.cmm
GLOBALON PBREAKGENERALDETECT DO run.cmm
GLOBALON PBREAKINIT DO run.cmm
GLOBALON PBREAKMACHINECHECK DO run.cmm
GLOBALON PBREAKSHUTDOWN DO run.cmm
GLOBALON PBREAKC6EXIT DO run.cmm
GLOBALON PBREAKENCLU DO run.cmm

---

(script
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal))
  (globalon_event_control
    (literal)))
